--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,56 @@ body {
     grid-column: 1 / 3;
 }
 
+#setup-dialog {
+    display: block; /*remove this */
+    margin: auto;
+    border-style: none;
+}
+
+#setup-form {
+    display: grid;
+    grid-template-columns: minmax(max-content, 20rem);
+    padding: 1rem 1.3rem;
+    gap: 0.3rem;
+    background-color: #c2c2c2;
+}
+
+#setup-form input {
+    width: 80%;
+}
+
+.label {
+    font-size: 2rem;
+}
+
+#x-label {
+    justify-self: start;
+}
+
+#o-label {
+    margin-top: 0.5rem;
+}
+
+#o-label,
+#player-o-name {
+    justify-self: end;
+}
+
+#setup-form #buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0.6rem;
+}
+
+#setup-form input,
+#play,
+#back-out {
+    font-size: 0.9rem;
+    padding: 0.2rem;
+}
+
 .game {
     display: grid;
     grid-template-rows: 0.7fr 0.3fr max-content 1fr;
@@ -87,7 +137,7 @@ body {
 }
 
 #result {
-    align-self: center;
+    font-size: 2rem;
 }
 
 #board {
@@ -98,7 +148,6 @@ body {
 .box {
     width: 100%;
     height: 100%;
-    /* background-color: rgb(196, 255, 201); */
     font-size: 4rem;
     align-content: center;
     text-align: center;
