Allow player input
Players can set names, first player and board size

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 #setup-dialog {
-    display: block; /*remove this */
+    /* display: block; remove this */
     margin: auto;
     border-style: none;
 }
