--- a/styles.css
+++ b/styles.css
@@ -124,11 +124,11 @@ img {
 }
 
 #setup-dialog {
-    /* display: block; remove this */
     margin: auto;
     border-style: none;
     border-radius: 0.5rem;
     background-color: transparent;
+    min-width: min-content;
 }
 
 #setup-form {
@@ -157,11 +157,11 @@ img {
     border: 0.15em solid #cacaca;
     display: grid;
     background-color: transparent;
+    color: #fff;
 }
 
 .label {
     font-size: 2.5rem;
-    color: #fff;
 }
 
 #setup-form .player-select:first-child {
@@ -254,6 +254,9 @@ img {
 #board {
     justify-self: center;
     align-self: start;
+    gap: .4rem;
+    background-color: #000;
+    margin: 1rem;
 }
 
 .box {
@@ -263,57 +266,7 @@ img {
     align-content: center;
     text-align: center;
     font-family: 'Gluten', sans-serif;
-}
-
-.vertical-line {
-    background-color: black;
-}
-.row-0 {
-    grid-row: 1;
-}
-.row-1 {
-    grid-row: 3;
-}
-.row-2 {
-    grid-row: 5;
-}
-.row-3 {
-    grid-row: 7;
-}
-.row-4 {
-    grid-row: 9;
-}
-.row-5 {
-    grid-row: 11;
-}
-.row-6 {
-    grid-row: 13;
-}
-
-.col-0 {
-    grid-column: 1;
-}
-.col-1 {
-    grid-column: 3;
-}
-.col-2 {
-    grid-column: 5;
-}
-.col-3 {
-    grid-column: 7;
-}
-.col-4 {
-    grid-column: 9;
-}
-.col-5 {
-    grid-column: 11;
-}
-.col-6 {
-    grid-column: 13;
-}
-
-.horizontal-line {
-    background-color: rgb(0, 0, 0);
+    background-color: #fff; 
 }
 
 .state-buttons {
